# TinMan

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json  do-docs.bash  do-tests-and-coverage.bash  package.xml
.github/workflows/: run-unit-test-and-upload-codecov.yml
include/tinman/: can_detection.hpp  manipulation.hpp  tinman.hpp  tinman_navigation.hpp
launch/: cafeteria_world.launch.py  integration_test.launch.yaml  later.launch.py  tinman.launch.py
maps/: cafeteria.pgm  cafeteria.yaml
models/building_editor_models/: CMakeLists.txt
models/building_editor_models/cafeteria_walls/: model.config  model.sdf
models/building_editor_models/cafeteria_walls_v2/: model.config  model.sdf
models/building_editor_models/competition/: model.config  model.sdf
models/building_editor_models/model1/: model.sdf
models/green_can/: model.config  model.sdf
models/my_cafeteria/: my_cafeteria.sdf
src/: can_detection.cpp  main.cpp  manipulation.cpp  test_can_detection.cpp  tinman.cpp  tinman_navigation.cpp
test/: level2_integration_test.cpp  test.cpp
worlds/: cafeteria.world
