<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tinman</name>
  <version>0.0.1</version>
  <description>Final Project Team 5 - Tinman</description>
  <maintainer email="swarajmr@umd.edu">swaraj</maintainer>
  <maintainer email="koustubh@umd.edu">koustubh</maintainer>
  <maintainer email="kborad@umd.edu">keyur</maintainer>
  <license>MIT</license>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
